feat(auth): modify login response
